# sumokoin

./: .gitignore  .gitmodules  .travis.yml  ANDROID-BUILD.md  ANONYMITY_NETWORKS.md  CMakeLists.txt  CMakeLists_IOS.txt  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.i18n  README.i18n.md  README.md  build-all-archs.sh  library.php  snap  sumo_gateway.php
.github/: contributing.md
.github/workflows/: build.yml
cmake/: 32-bit-toolchain.cmake  64-bit-toolchain.cmake  CheckLinkerFlag.cmake  CheckTrezor.cmake  Doxyfile.in  FindBacktrace.cmake  FindBoost.cmake  FindHIDAPI.cmake  FindLibUSB.cmake  FindLibunwind.cmake  FindMiniupnpc.cmake  FindReadline.cmake  FindUnbound.cmake  GenVersion.cmake  GitVersion.cmake  Version.cmake  test-libusb-version.c  test-protobuf.cpp  test-static-assert.c  test-static-assert.cpp
contrib/: CMakeLists.txt
contrib/brew/: Brewfile
contrib/codefresh/: codefresh.yml
contrib/depends/: Makefile  README.md  funcs.mk  toolchain.cmake.in
contrib/epee/: CMakeLists.txt
contrib/gitian/: README.md  gitian-android.yml  gitian-build.py  gitian-freebsd.yml  gitian-linux.yml  gitian-osx.yml  gitian-win.yml
contrib/rlwrap/: sumokoincommands_sumokoin-wallet-cli.txt  sumokoincommands_sumokoind.txt
contrib/snap/: snapcraft.yaml  sumokoind-wrapper  sumokoind.conf
documentation/: LEVIN_PROTOCOL.md  README.i18n.md  ZMQ.md
extra/sumowoocommerce/: README.md  sumo_gateway.php
include/: INode.h  IWallet.h  base58.php  cryptonote.php  sumo_payments.php
monero/: gateway.php  library.php  monero_gateway.php
monero/include/: monero_payments.php
scripts/: checkout.sh  debiandeps.sh  sumokoin_camel_emission_cal.cpp  sumokoin_camel_emission_cal.py
src/: CMakeLists.txt  crypto_config.h  cryptonote_config.h  difficulty_config.h  hardforks_checkpoints_config.h  p2p_config.h  seeds_config.h  version.cmake  version.cpp.in  version.h  version.h.in
src/blockchain_db/: CMakeLists.txt  blockchain_db.cpp  blockchain_db.h  db_types.h  testdb.h
src/blockchain_utilities/: CMakeLists.txt  README.md  address_book.cpp  blockchain_ancestry.cpp  blockchain_blackball.cpp  blockchain_depth.cpp  blockchain_export.cpp  blockchain_import.cpp  blockchain_prune.cpp  blockchain_prune_known_spent_data.cpp  blockchain_stats.cpp  blockchain_usage.cpp  blockchain_utilities.h  blocksdat_file.cpp  blocksdat_file.h  bootstrap_file.cpp  bootstrap_file.h  bootstrap_serialization.h  cn_deserialize.cpp  fake_core.h  utilities_menu.cpp
src/blocks/: CMakeLists.txt  blockexports.c  blocks.cpp
src/checkpoints/: CMakeLists.txt  checkpoints.cpp
src/common/: CMakeLists.txt  aligned.c  aligned.h  apply_permutation.h  base58.cpp  base58.h  boost_serialization_helper.h  command_line.cpp  command_line.h  common_fwd.h  dns_utils.cpp  dns_utils.h  download.cpp  download.h  error.cpp  exec.cpp  exec.h  expect.cpp  expect.h  http_connection.h  i18n.cpp  i18n.h  int-util.h  json_util.h  notify.cpp  notify.h  password.cpp  password.h  perf_timer.cpp  perf_timer.h  pod-class.h  pruning.cpp  pruning.h  rpc_client.h  scoped_message_writer.h  sfinae_helpers.h  spawn.cpp  spawn.h  stack_trace.cpp  stack_trace.h  (+13 more)
src/crypto/: CMakeLists.txt  CryptonightR_JIT.c  blake256.c  blake256.h  chacha.c  chacha.h  chacha8.h  cn_heavy_hash.hpp  cn_heavy_hash_hard_arm.cpp  cn_heavy_hash_hard_intel.cpp  cn_heavy_hash_soft.cpp  cn_monero_slow_hash.c  cn_slow_hash.hpp  cn_slow_hash_hard_arm.cpp  cn_slow_hash_hard_intel.cpp  cn_slow_hash_soft.cpp  crypto-ops-data.c  crypto-ops.c  crypto-ops.h  crypto.cpp  crypto.h  duration.h  generic-ops.h  groestl.c  groestl.h  groestl_tables.h  hash-extra-blake.c  hash-extra-groestl.c  hash-extra-jh.c  hash-extra-skein.c  hash-ops.h  hash.c  hash.h  hmac-keccak.c  hmac-keccak.h  initializer.h  jh.c  keccak.c  keccak.h  oaes_config.h  (+11 more)
src/cryptonote_basic/: CMakeLists.txt  account.cpp  account.h  account_boost_serialization.h  blobdatatype.h  connection_context.cpp  connection_context.h  cryptonote_basic.h  cryptonote_basic_impl.cpp  cryptonote_basic_impl.h  cryptonote_boost_serialization.h  cryptonote_format_utils.cpp  cryptonote_format_utils.h  difficulty.cpp  difficulty.h  hardfork.cpp  hardfork.h  miner.cpp  miner.h  subaddress_index.h  tx_extra.h  verification_context.h
src/cryptonote_core/: CMakeLists.txt  account.cpp  account.h  account_boost_serialization.h  blockchain.cpp  blockchain.h  blockchain_storage_boost_serialization.h  checkpoints.cpp  checkpoints.h  connection_context.h  cryptonote_basic.h  cryptonote_basic_impl.cpp  cryptonote_basic_impl.h  cryptonote_boost_serialization.h  cryptonote_core.cpp  cryptonote_core.h  cryptonote_format_utils.cpp  cryptonote_format_utils.h  cryptonote_stat_info.h  cryptonote_tx_utils.cpp  cryptonote_tx_utils.h  difficulty.cpp  difficulty.h  hardfork.cpp  hardfork.h  i_core_events.h  miner.cpp  miner.h  subaddress_index.h  tx_extra.h  tx_pool.cpp  tx_pool.h  tx_sanity_check.cpp  tx_sanity_check.h  verification_context.h
src/cryptonote_protocol/: CMakeLists.txt  blobdatatype.h  block_queue.cpp  block_queue.h  cryptonote_protocol_defs.h  cryptonote_protocol_handler-base.cpp  cryptonote_protocol_handler.h  cryptonote_protocol_handler.inl  cryptonote_protocol_handler_common.h  enums.h  fwd.h  levin_notify.cpp  levin_notify.h
src/daemon/: CMakeLists.txt  command_line_args.h  command_parser_executor.cpp  command_parser_executor.h  command_server.cpp  command_server.h  core.h  daemon.cpp  daemon.h  executor.cpp  executor.h  main.cpp  p2p.h  protocol.h  rpc.h  rpc_command_executor.cpp  rpc_command_executor.h
src/daemonizer/: CMakeLists.txt  daemonizer.h  posix_daemonizer.inl  posix_fork.cpp  windows_daemonizer.inl  windows_service.cpp  (+2 more)
sumo/: sumo_gateway.php
tests/: CMakeLists.txt  README.md  benchmark.cpp  benchmark.h.in  cryptolib.pl  cryptotest.pl  hash-target.cpp  io.h
translations/: CMakeLists.txt  monero_de.ts  monero_es.ts  monero_fr.ts  monero_hi.ts  monero_it.ts  monero_ja.ts  monero_nl.ts  monero_pl.ts  monero_sk.ts  monero_sv.ts  monero_tr.ts  monero_zu.ts.ts  sumokoin.ts
utils/: doxygen-publish.sh
(+731 files in other folders)
